# AWS

./: .env.example  Makefile  README.md  pyproject.toml
transitionzero/goodreads/: app.py
transitionzero/goodreads/controllers/: books.py
transitionzero/goodreads/models/: database.py
transitionzero/goodreads/schemas/: books.py
transitionzero/goodreads/services/: books.py
transitionzero/goodreads/views/: books.py
