[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tz-goodreads"
version = "0.0.1"
description = "TZ Goodreads API"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "sqlalchemy",
    "psycopg2",
    "uvicorn",
    "fastapi",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["transitionzero*"]
namespaces = true
